--- a/infi-ai-cloud-base/data/firmware_releases.json
+++ b/infi-ai-cloud-base/data/firmware_releases.json
@@ -30,5 +30,13 @@
     "intent_schema_version": "0.9.0",
     "kb_manifest_version": "0.9.2",
     "release_notes": "Pilot release used for STM32 parser/router portability harness."
+  },
+  {
+    "firmware_name": "infiltra-firmware",
+    "version": "0.1.0",
+    "channel": "research",
+    "intent_schema_version": "0.0.0",
+    "kb_manifest_version": "0.0.0",
+    "release_notes": "Repo source registered: https://github.com/D3CRYPT-1/Infiltra-Firmware (main firmware folder: 'Infiltra Firmware')."
   }
 ]
