feat: settings danger zone (delete instance) + restart ui

--- a/infi-control-ui-v2/netlify.toml
+++ b/infi-control-ui-v2/netlify.toml
@@ -24,6 +24,11 @@
   status = 200
 
 [[redirects]]
+  from = "/api/apikey/reset"
+  to = "/.netlify/functions/apikey_reset"
+  status = 200
+
+[[redirects]]
   from = "/api/connections/list"
   to = "/.netlify/functions/connections_list"
   status = 200
