fix: restore /api/pair/claim back-compat redirect

--- a/infi-control-ui-v2/netlify.toml
+++ b/infi-control-ui-v2/netlify.toml
@@ -18,6 +18,12 @@
   to = "/.netlify/functions/pair_finish"
   status = 200
 
+# Back-compat (older UI/commands)
+[[redirects]]
+  from = "/api/pair/claim"
+  to = "/.netlify/functions/pair_claim"
+  status = 200
+
 [[redirects]]
   from = "/api/apikey/register"
   to = "/.netlify/functions/apikey_register"
